--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 body {
-  /* width: 1200px; */
   align-self: center;
   background-color: slategrey;
   margin: 0px;
@@ -13,11 +12,10 @@ body {
 /* Signup Button */
 
 .signup_button {
-  background-color:#3882F6;
-  color:#E5E7EB;
+  background-color: #3882f6;
+  color: #e5e7eb;
   width: 100px;
   text-align: center;
-  /* font-weight: bold; */
   border-radius: 10px;
   border: 2px solid white;
 }
@@ -26,47 +24,50 @@ body {
 
 .hero {
   display: flex;
-  padding: 40px 80px;
   align-items: center;
   justify-content: space-evenly;
-  gap: 40px;
+  padding: 5%;
 }
 
 .hero_item {
-  /* width: 400px; */
-  /* height: 200px; */
   flex: 1;
-  padding: 1% 10%;
-  /* border: 2px solid red; */
-  align-self: center;
+
 }
 
 .hero_main {
-  font-size: 48px;
+  font-size: 36px;
   font-weight: extra-bold;
   color: #f9faf8;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .hero_subtext {
-    font-size: 18px;
-    color: #E5E7EB;
-}
-
-.hero_image {
-  background-color: lawngreen;
-  width: 240px;
-  height: 120px;
-  padding: 40px;
-  text-align: center;
+  font-size: 18px;
+  color: #e5e7eb;
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
 
 .hero_text {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  padding: 0px;
+  margin: 0px;
 }
 
 .hero_text_item {
-    flex: 1;
+  flex: 1;
+}
+
+.hero_item_right{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hero_image {
+  flex: 1;
 }
 
 /* Random section */
@@ -84,13 +85,14 @@ body {
   display: flex;
   gap: 40px;
   padding: 40px;
+  align-items: center;
 }
 
 .random_box {
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 100px;
   border-radius: 10px;
-  flex: 1 1 0%;
+  flex: 1 1 auto;
   border: 4px solid teal;
   background-color: dodgerblue;
 }
@@ -98,9 +100,8 @@ body {
 /* Nav Bar */
 
 .nav_container {
-  padding: 10px;
+  padding: 0% 5%;
   display: flex;
-  justify-content: center;
 }
 
 .nav_item {
@@ -110,14 +111,13 @@ body {
 .nav_links {
   align-self: right;
   /* width: 500px; */
-  flex: 1;
   display: flex;
-
 }
 
 .nav_links a:link {
   color: white;
   text-decoration: none;
+  flex: 1;
 }
 
 .nav_links a:visited {
@@ -131,27 +131,24 @@ body {
 }
 
 .nav_logo {
-  flex: 1 2 auto;
   color: white;
   font-weight: bold;
-  padding: 0px 100px;
 }
 
 /* Quote */
 .quote {
-  background-color: #E5E7EB;
-  padding: 2% 30%;
+  background-color: #e5e7eb;
+  padding: 2% 20%;
   display: flex;
   flex-direction: column;
 }
 
 .quote_text {
   font-weight: lighter;
-    font-style: italic;
+  font-style: italic;
   font-size: 20px;
   flex: 1;
-  color: #1F2937
-  
+  color: #1f2937;
 }
 
 .quote_author {
@@ -162,16 +159,59 @@ body {
 
 /* Footer section */
 
-.footer {
-    color: white;
-    margin: 2% 10%;
-    display: flex;
-    align-items: center;
-
-
+.call_to_action {
+  margin: 5% 5%;
+  border-radius: 10px;
+  background-color: #3882f6;
+  display: flex;
 }
 
-.footer_item{
-    flex: 1;
-    justify-content: space-evenly;
+.call_left_item {
+  flex: 2;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+.call_right_item {
+  flex: 1;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+.call_text {
+  color: white;
+  margin-left: 5%;
+  display: flex;
+  flex-direction: column;
+}
+
+.call_maintext {
+  flex: 1;
+  margin: 0px;
+}
+
+.call_subtext {
+  flex: 1;
+  margin: 0px;
+  font-size: smaller;
+}
+
+.call_button {
+  color: white;
+  margin: 2% 5%;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.call_signup_button {
+  flex: 1;
+}
+
+.footer {
+  color: white;
+  text-align: center;
+  font-size: 12px;
+  padding:3%;
 }
